# p1gen

./: .gitignore  README.md  Untitled  main.py  pull_replan2eplus.sh  pyproject.toml
notebooks/: mtime_series.py  time_series.ipynb
src/p1gen/: axtest.py  config.py  conntest.py  data_helpers.py  deviation.py  export.py  geom_data.py  geom_plot.py  main.py  paths.py  qois.py  read_sql.py  result.py  sampling.py  time_series.py  utils.py  volume.py
src/p1gen/_01_readin/: interfaces.py  read.py  subsurface_interfaces.py
src/p1gen/_02_generate/: construction_sets.py  data_dict.py  defn_dict.py  main.py  utils.py
src/p1gen/_02_generate/example/: vent_sched.py
src/p1gen/_03_execute/: assemble.py  interfaces.py  run.py  zone_size.py
src/p1gen/_04_single_day/: deviation.py  geom.py  geom_data.py
src/p1gen/_05_sensitivity/: data.py  plot.py  temperature_order.py
src/p1gen/analysis/: deviation.py  qois.py  time_series.py  utils.py
src/p1gen/experiment/: data_dict.py  defn_dict.py  main.py  vent_schedules.py
src/p1gen/generate/: construction_sets.py  data_dict.py  defn_dict.py  main.py  utils.py
src/p1gen/generate/example/: vent_sched.py
src/p1gen/geom/: geom.py  geom_data.py
src/p1gen/interfaces/: subsurface_interfaces.py
src/p1gen/plot_utils/: deviation.py  labels.py  qois.py  save.py  time_series.py  utils.py
src/p1gen/readin/: interfaces.py  main.py  read.py  subsurface_interfaces.py
src/p1gen/sensitivity/: data.py  example.py  plot.py  temperature_order.py
src/p1gen/study/: assemble.py  interfaces.py  run.py
src/p1gen/tables/: basic.py  constructions.py
src/p1gen/take2/: interfaces.py  main.py  subsurface_interfaces.py
src/p1gen/time_period/: data.py  dist.py  epw.py  epw_read.py  plot.py  site.py
static/_01_inputs/calee24/: CA_PALO-ALTO-AP_724937S_CALEE2024.BINM  CA_PALO-ALTO-AP_724937S_CALEE2024.FIN4  CA_PALO-ALTO-AP_724937S_CALEE2024.epw
static/_01_inputs/pa2017/: CA_PALO-ALTO-AP_724937S.DDY2
static/_02_plans/svg2plan_outputs_p1gen/case_amb_b1/: graph.json
static/_04_temp/: 251109_summary.bp.py
tests/: test_run_cases.py  test_run_exp.py
throwaway/: out.idf
throwaway/results/: eplusout.audit  eplusout.bnd  eplusout.eio  eplusout.err  eplusout.eso  eplusout.mdd  eplusout.mtd  eplusout.rdd  eplusout.shd  eplustbl.htm
typings/replan2eplus/: errors.pyi  paths.pyi
(+3 files in other folders)
