[project]
name = "p1gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Juliet Nwagwu Ume-Ezeoke", email = "jnwagwu@stanford.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "eppy>=0.5.63",
    "geomeppy>=0.11.8",
    "ipython>=9.4.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "pyprojroot>=0.3.0",
    "replan2eplus==0.1.*",
    "utils4plans>=0.1.6",
]

[project.scripts]
p1gen = "p1gen:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
