[project]
name = "p1gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Juliet Nwagwu Ume-Ezeoke", email = "jnwagwu@stanford.edu" },
]


requires-python = ">=3.13"


dependencies = [
    "altair>=5.5.0",
    "bidict>=0.23.1",
    "eppy>=0.5.63",
    "geomeppy>=0.11.8",
    "ipython>=9.4.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "pyprojroot>=0.3.0",
    "vl-convert-python>=1.8.0",
    "loguru>=0.7.3",
    "replan2eplus",
    "marimo>=0.16.2",
    "utils4plans",
    "watchdog>=6.0.0",
    "ptpython>=3.0.31",
    "astropy>=7.1.1",
    "cmasher>=1.9.2",
    "great-tables>=0.20.0",
    "latextable>=1.0.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
p1gen = "p1gen:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.33.0",
]

[tool.uv.sources]
replan2eplus = { path = "../../replan2eplus" }
utils4plans = { path = "../../utils4plans" }
